fixed minor woj spacing issue

--- a/style.scss
+++ b/style.scss
@@ -771,6 +771,7 @@ main {
       }
     }
     .page4point5 {
+      height: 100vh;
       h1 {
       }
       .imageSection {
